
The material needed for the item is based on highest level the item can have.

MOB UPDATE:

I added many new elemental or special mobs to the game.
These mobs spawn during daytime too :)
World should be a lot more lively now!

Currently there's variations of: zombies, spiders and slimes!

AREA UPDATE:

Each biome is now special and has its own modifiers.
You might get to a Poisonous Swamp or an Infernal Desert.
These modifiers allow my added mobs to spawn, so you'll see nature spiders in poisonous swamps etc.

Compatibility update:

- compatible items are now always enabled
- You can now pick gear from creative tab, and it will get stats.
- compatible item datapacks no longer specify level, as level is now dictated by gear type
- compat items now get stats instantly when crafted (for some reason you need to reopen inventory for the client to get the data synced tho)
- compat items are no longer added to loot drops automatically
- added auto compat config blacklist for both items and mods, this should be useful for some mods that work mostly on item nbt and aren't suitable for compat


Minor notes:

- should fix crossbows not doing extra dmg
- added gear slot datapacks. Super tiny, just declares drop chances. 
So if there's 100 different sword types, and 5 axe types, they'll still have same chance to drop if their gear slots have same weight.
- renamed all my packages to my new mod name
- mob affixes now aren't separated into prefixes and suffixes
- fix jewel crash bug
- lvl 1 common mobs should now have similar health as vanilla minecraft.
- mobs will have less hp on average
- fix nature balm
- level ups now show on screen title messages.
- fixed some texture errors
- added mana burn stat, arcane mobs all have it
- added mana burn resistance
- fix attack speed
- Jar in Jared some deps in my library
- fix typo in mod name of config
- lowered slow scaling of stats (they shouldnt double at max lvl now)